  addition to CVS and RCS directories.  .svn directories hold
  administrative files for the Subversion source control system.

- Bug #902501: fix unicode value of CYRILLIC CAPITAL LETTER UKRAINIAN IE
  in KOI8-U to unicode convertion table.

Tools/Demos
-----------

- pygettext.py: Generate POT-Creation-Date header in ISO format.

Build
-----

- Bug #978645: Modules/getpath.c now builds properly under --disable-framework
  build under OS X.

What's New in Python 2.3.4 (final)?
===================================

*Release date: 27-May-2004*

What's New in Python 2.3.4rc1?
==============================

*Release date: 13-May-2004*

Core and builtins
-----------------

- Bug #858016: isinstance() and issubclass() can have their second
  argument be a tuple whose nested depth is capped at the interpreter's
  recursion limit.  Raises RuntimeError if the limit reached.

- Made omitted callback and None equivalent for weakref.ref() and
  weakref.proxy(); the None case wasn't handled correctly in all
  cases.

- Fixed problem where PyWeakref_NewRef() and PyWeakref_NewProxy()
  assumed that initial existing entries in an object's weakref list
  would not be removed while allocating a new weakref object.  Since
  GC could be invoked at that time, however, that assumption was
  invalid.  In a truly obscure case of GC being triggered during
  creation for a new weakref object for an referent which already
  has a weakref without a callback which is only referenced from
  cyclic trash, a memory error can occur.  This consistently created a
  segfault in a debug build, but provided less predictable behavior in
  a release build.

- Fixed a bug in object.__reduce_ex__ when using protocol 2.  Failure
  to clear the error when attempts to get the __getstate__ attribute
  fail caused intermittent errors and odd behavior.

- fixed: if a file is opened with an explicit buffer size >= 1, repeated
  close() calls would attempt to free() the buffer already free()ed on