@@ -1237,7 +1237,11 @@ def gen_lib_options (compiler, library_dirs, runtime_library_dirs, libraries):
         lib_opts.append (compiler.library_dir_option (dir))
 
     for dir in runtime_library_dirs:
-        lib_opts.append (compiler.runtime_library_dir_option (dir))
+        opt = compiler.runtime_library_dir_option (dir)
+        if type(opt) is ListType:
+            lib_opts = lib_opts + opt
+        else:
+            lib_opts.append (opt)
 
     # XXX it's important that we *not* remove redundant library mentions!
     # sometimes you really do have to say "-lfoo -lbar -lfoo" in order to
